projects/rhodes.akn/dist/infrastructure/kubernetes/external-secrets/apps.v1.Deployment.external-secrets-cert-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/version: v2.8.0
    helm.sh/chart: external-secrets-2.8.0
  name: external-secrets-cert-controller
  namespace: external-secrets-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-cert-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/version: v2.8.0
        helm.sh/chart: external-secrets-2.8.0
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - certcontroller
        - --crd-requeue-interval=5m
        - --service-name=external-secrets-webhook
        - --service-namespace=external-secrets-system
        - --secret-name=external-secrets-webhook
        - --secret-namespace=external-secrets-system
        - --metrics-addr=:8080
        - --healthz-addr=:8081
        - --loglevel=info
        - --zap-time-encoding=epoch
        - --enable-partial-cache=true
        image: oci.chezmoi.sh/ghcr.io/external-secrets/external-secrets:v2.8.0
        imagePullPolicy: IfNotPresent
        name: cert-controller
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 8081
          name: ready
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: ready
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
      hostNetwork: false
      serviceAccountName: external-secrets-cert-controller
