projects/rhodes.akn/dist/infrastructure/kubernetes/external-secrets/apps.v1.Deployment.external-secrets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/version: v2.8.0
    helm.sh/chart: external-secrets-2.8.0
  name: external-secrets
  namespace: external-secrets-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/version: v2.8.0
        helm.sh/chart: external-secrets-2.8.0
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --concurrent=1
        - --metrics-addr=:8080
        - --loglevel=info
        - --zap-time-encoding=epoch
        image: oci.chezmoi.sh/ghcr.io/external-secrets/external-secrets:v2.8.0
        imagePullPolicy: IfNotPresent
        name: external-secrets
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
      dnsPolicy: ClusterFirst
      hostNetwork: false
      securityContext:
        fsGroup: 23987
        runAsGroup: 23987
        runAsNonRoot: true
        runAsUser: 23987
      serviceAccountName: external-secrets
