projects/rhodes.akn/dist/infrastructure/kubernetes/external-secrets/core.v1.Service.external-secrets-webhook.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.8.0
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-2.8.0
  name: external-secrets-webhook
  namespace: external-secrets-system
spec:
  ports:
  - name: webhook
    port: 443
    protocol: TCP
    targetPort: webhook
  selector:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/name: external-secrets-webhook
  type: ClusterIP
