projects/rhodes.akn/dist/infrastructure/kubernetes/external-secrets/cilium.io.v2.CiliumNetworkPolicy.allow-external-secrets-to-kubernetes-api.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the external-secrets controller to access the Kubernetes API server to watch
      ExternalSecret, SecretStore and related custom resources, and to create/update the
      resulting Kubernetes Secrets.
  name: allow-external-secrets-to-kubernetes-api
  namespace: external-secrets-system
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
