projects/rhodes.akn/dist/infrastructure/kubernetes/external-secrets/cilium.io.v2.CiliumNetworkPolicy.allow-intra-namespace.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in the external-secrets-system namespace.
  name: allow-intra-namespace
  namespace: external-secrets-system
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: external-secrets-system
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: external-secrets-system
